nieuwe update van het design

--- a/aanmaken.html
+++ b/aanmaken.html
@@ -6,8 +6,8 @@
     <title>Nieuwe Oefening Aanmaken</title>
     <link rel="stylesheet" href="style1.css">
 </head>
-<body>
-    <div class="container">
+<body style="min-height: 100vh;">
+    <div class="aanmaak-container">
         <div class="inner">
             <h1>Nieuwe Oefening Toevoegen</h1>
             <form id="newExerciseForm" class="exercise-form">
