toevoegen aan de data base met POST request

--- a/aanmaken.html
+++ b/aanmaken.html
@@ -31,7 +31,7 @@
                     <textarea id="omschrijving" name="Omschrijving" rows="4" required></textarea>
                 </div>
 
-                <button type="submit" class="submit-btn">Oefening Toevoegen</button>
+                <button type="submit" class="submit-btn">Oefening Toevoegen!!!</button>
             </form>
         </div>
     </div>
