--- a/index.html
+++ b/index.html
@@ -28,98 +28,7 @@
                 </label>
             </div>
         </div>
-        <div class="container">
-            <div class="card-container">
-                <div class="foto">
-                    <img id="afbeelding0" src="" alt="fitness" />
-                </div>
-                <div class="gegevens" id="oefening0"></div>
-                <table>
-                    <tr>
-
-                        <td>Sets</td><td><div class="gegevens" id="sets0"></div></td>
-                    </tr>
-                    <tr>
-                        <td>Duur</td><td><div class="gegevens" id="duur0"></div></td>
-                    </tr>
-                    <tr>
-                        <td>Aantal</td><td><div class="gegevens" id="aantal0"></div></td>
-                    </tr>
-            </table>
-            <h4>omschrijving:</h4>
-            <div class="gegevens" id="omschrijving0"></div></td>
-            </div>
-
-        <div class="card-container">
-            <div class="foto">
-                <img id="afbeelding1" src="" alt="fitness" />
-            </div>
-            <div class="gegevens" id="oefening1"></div>
-            <table>
-                <tr>
-                    <td>Sets</td>
-                    <td><div class="gegevens" id="sets1"></div></td>
-                </tr>
-                <tr>
-                    <td>Duur</td>
-                    <td><div class="gegevens" id="duur1"></div></td>
-                </tr>
-                <tr>
-                    <td>Aantal</td>
-                    <td><div class="gegevens" id="aantal1"></div></td>
-                </tr>
-
-            </table>
-            <h4>omschrijving:</h4>
-            <div class="gegevens" id="omschrijving1"></div>
-        </div>
-        <div class="card-container">
-            <div class="foto">
-                <img id="afbeelding2" src="" alt="fitness" />
-            </div>
-            <div class="gegevens" id="oefening2"></div>
-            <table>
-                <tr>
-                    <td>Sets</td>
-                    <td><div class="gegevens" id="sets2"></div></td>
-                </tr>
-                <tr>
-                    <td>Duur</td>
-                    <td><div class="gegevens" id="duur2"></div></td>
-                </tr>
-                <tr>
-                    <td>Aantal</td>
-                    <td><div class="gegevens" id="aantal2"></div></td>
-                </tr>
-
-            </table>
-            <h4>omschrijving:</h4>
-            <div class="gegevens" id="omschrijving2"></div>
-        </div>
-        
-        <div class="card-container">
-            <div class="foto">
-                <img id="afbeelding3" src="" alt="fitness" />
-            </div>
-            <div class="gegevens" id="oefening3"></div>
-            <table>
-                <tr>
-                    <td>Sets</td>
-                    <td><div class="gegevens" id="sets3"></div></td>
-                </tr>
-                <tr>
-                    <td>Duur</td>
-                    <td><div class="gegevens" id="duur3"></div></td>
-                </tr>
-                <tr>
-                    <td>Aantal</td>
-                    <td><div class="gegevens" id="aantal3"></div></td>
-                </tr>
-
-            </table>
-            <h4>omschrijving:</h4>
-            <div class="gegevens" id="omschrijving3"></div>
-        </div>
+        <div class="container" id="kaart-wrapper">
     </div>
     <script src="script.js"></script>
     <script src="drag.js"></script>
@@ -131,20 +40,47 @@
         .then((r) => r.json())
         .then((d) => toonOefeningen(d));
 
+        function voegIetsToe() {
+            console.log("Hallo")
+
+            let oefening = {}
+            oefening.duur = document.getElementById("duration").value;
+            fetch("http://127.0.0.1:5000//bench_oefeningen", {
+                headers: {
+                    'Accept': 'application.json',
+                    'Content-Type': 'application/json'
+                },
+                method: "POST",
+                body: JSON.stringify(oefening)
+            })
+        }
+
+        drag()
     function toonOefeningen(bench_oefeningen) {
-        for(i = 0; i < 4; i++) {
-        console.log(bench_oefeningen);
-        document.getElementById("afbeelding" +i).src = bench_oefeningen[i].foto;
-        document.getElementById("duur"+i).innerHTML = bench_oefeningen[i].duur;
-        document.getElementById(
-            "oefening"+i
-        ).innerHTML = `<h1> ${bench_oefeningen[i].Oefeningen} </h1>`;
-        document.getElementById("sets"+i).innerHTML =
-            bench_oefeningen[i].Sets + "x";
-        document.getElementById("aantal"+i).innerHTML =
-            bench_oefeningen[i].Aantal_keer + "x";
-        document.getElementById("omschrijving"+i).innerHTML =
-            bench_oefeningen[i].Omschrijving;
+        for(i = 0; i < bench_oefeningen.length; i++) {
+            document.getElementById("kaart-wrapper"). innerHTML += 
+`
+            <div class="card-container">
+                <div class="foto">
+                    <img id="afbeelding0" src="${bench_oefeningen[i].foto}" alt="fitness" />
+                </div>
+                <div class="gegevens" id="oefening0">${bench_oefeningen[i].Oefeningen}</div>
+                <table>
+                    <tr>
+
+                        <td>Sets</td><td><div class="gegevens" id="sets0">${bench_oefeningen[i].Sets}</div></td>
+                    </tr>
+                    <tr>
+                        <td>Duur</td><td><div class="gegevens" id="duur0">${bench_oefeningen[i].duur}</div></td>
+                    </tr>
+                    <tr>
+                        <td>Aantal</td><td><div class="gegevens" id="aantal0">${bench_oefeningen[i].Aantal_keer}</div></td>
+                    </tr>
+            </table>
+            <h4>omschrijving:</h4>
+            <div class="gegevens" id="omschrijving0">${bench_oefeningen[i].Omschrijving}</div></td>
+            </div>
+`
         }
     //     // tweede oefening
     //     console.log(bench_oefeningen);
@@ -217,7 +153,7 @@
                 <label for="description">Omschrijving:</label>
                 <textarea id="description" rows="4" required></textarea>
             </div>
-            <button type="submit" class="submit-btn">Toevoegen</button>
+            <button type="submit" class="submit-btn" onclick="voegIetsToe()">Toevoegen</button>
         </div>
     </div>
 </div>
